--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -31,8 +31,8 @@
     "@metaplex-foundation/beet": "^0.4.0",
     "@metaplex-foundation/beet-solana": "^0.3.0",
     "@metaplex-foundation/cusper": "^0.0.2",
-    "@solana/spl-token": "^0.2.0",
-    "@solana/web3.js": "^1.48.0"
+    "@safecoin/safe-token": "^0.2.0",
+    "@safecoin/web3.js": "^1.48.0"
   },
   "devDependencies": {
     "eslint": "^8.20.0",
