--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -11,12 +11,12 @@ readme = "../README.md"
 
 [dependencies]
 borsh = "0.9.3"
-mpl-token-metadata = { version = "1.8.0", features = ["no-entrypoint"] }
-mpl-utils = "0.0.5"
+lpl-token-metadata = { version = "1.8.5", path = "../../ledamint-program-library/token-metadata/program", features = ["no-entrypoint"] }
+lpl-utils = "0.1.0"
 num-derive = "0.3.3"
 num-traits = "~0.2"
 shank = "0.0.10"
-solana-program = "1.14"
+safecoin-program = "1.14"
 thiserror = "~1.0"
 
 
@@ -26,9 +26,9 @@ test-bpf = []
 
 [dev-dependencies]
 assert_matches = "1.5.0"
-solana-program-test = "1.14"
-solana-sdk = "1.14"
-solana-logger = "1.14"
+safecoin-program-test = "1.14"
+safecoin-sdk = "1.14"
+safecoin-logger = "1.14"
 
 [lib]
 crate-type = ["cdylib", "lib"]
