--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -16,7 +16,7 @@ lpl-utils = "0.1.0"
 num-derive = "0.3.3"
 num-traits = "~0.2"
 shank = "0.0.10"
-safecoin-program = {path = "../../../Safecoin/sdk/program", version = "1.15.3"}
+safecoin-program = {path = "../../Safecoin/sdk/program", version = "1.15.3"}
 thiserror = "~1.0"
 
 
@@ -26,9 +26,9 @@ test-bpf = []
 
 [dev-dependencies]
 assert_matches = "1.5.0"
-safecoin-program-test = {path = "../../../Safecoin/program-test", version = "1.15.3"}
-safecoin-sdk = {path = "../../../Safecoin/sdk", version = "1.15.3"}
-safecoin-logger = {path = "../../../Safecoin/logger", version = "1.15.3"}
+safecoin-program-test = {path = "../../Safecoin/program-test", version = "1.15.3"}
+safecoin-sdk = {path = "../../Safecoin/sdk", version = "1.15.3"}
+safecoin-logger = {path = "../../Safecoin/logger", version = "1.15.3"}
 
 [lib]
 crate-type = ["cdylib", "lib"]
